    *  *  means a general bullet-point *
    *                                  *
    ************************************



Version 4.0.12 (1st September 2025)
===================================

 * Documentation;
 * CMake helper scripts now define default make command as "mingw32-make.exe" if recognise MinGW;
 * *.sh : ~ moved info-lines into ./.sis/script_info_lines.txt;
 * . . .


Version 4.0.11 (23rd February 2025)
===================================

 * Boilerplate;
 * Simplication of dependencies;


Version 4.0.10 (25th October 2024)
==================================

 * Substantial CMake improvements;
 * MinGW compatibility;


Version 4.0.9 (28th January 2024)
=================================

 ~ improved CMake support;
 ~ CMake language standards now C-11 and C++14;
 ~ fixed typo defect in definition of CSTRING_F_USE_WINDOWS_PROCESSHEAP_MEMORY;
 + project boilerplate files:
    + AUTHORS.md;
    + CHANGES.txt;
    + FAQ.md;
    + HISTORY.md;
    + NEWS.md;


Version 4.0.8 (12th January 2024)
=================================

 + added cstring.vector API;
 + added API function cstring_write();
 + wide string support (indicated via CSTRING_USE_WIDE_STRINGS);
 + partial CMake support;
 + added result code CSTRING_RC_REQUESTTOOLARGE;
 + added component test test.component.cstring_writeline;
 + added scratch test test.scratch.cstring_vector;
 + added unit test test.unit.cstring.cstring_vector;


Version 3.6.2 (20th February 2012)
==================================

Summary:
--------

 * added CSTRING_RC_SYSTEMSPECIFICFAILURE
 * all makefiles now build cstring.3.core*.(lib|a) rather than cstring.3*.(lib|a) : this was erroneously omitted from the 3.6.1 release

Details:
--------

General:

 ~ include/cstring/cstring.h:
    + added CSTRING_RC_SYSTEMSPECIFICFAILURE
    ~ makefiles now build cstring.3.core*.(lib|a) rather than cstring.3*.(lib|a)

 ~ src/cstring.core.c:
    + added CSTRING_RC_SYSTEMSPECIFICFAILURE

Distribution:

Makefiles / Project-files:
