@@ -1,6 +1,52 @@
 # cstring - TODO <!-- omit in toc -->
 
-T.B.C.
+* [ ] README:
+  * [ ] badges;
+  * [ ] intro examples;
+* [ ] Boilerplate:
+  * [ ] EOFs;
+  * [ ] .txt => .md;
+  * [ ] layouyt
+* [ ] CMake:
+  * [ ] custom definitions:
+    * [ ] `_BUILD_AS_UNIX` / `_BUILD_AS_WIN32`;
+    * [ ] . . .
+  * [ ] `CMAKE_INSTALL_LIBDIR`;
+  * [ ] **CTest**;
+  * [ ] build DLL on Windows;
+  * [ ] `/MT` build option for Visual C++;
+  * [ ] **shwild** dependency (testing only)
+  * [ ] . . .
+* [ ] Examples:
+  * [ ] . . .
+* [ ] Tests:
+  * [ ] Scratch:
+    * [ ] **libver**;
+  * [ ] . . .
+* [ ] Delete Visual Studio 98 files;
+* [ ] Delete Visual Studio 2003+ files;
+* [ ] Build scripts:
+  * [ ] remove project/copyright information and pick up from a project-specific file;
+* [ ] GitHub Actions:
+  * [ ] macOS;
+  * [ ] Unix;
+  * [ ] Windows;
+  * [ ] Debug configuration;
+  * [ ] Release configuration;
+* [ ] Performance testing and optimisation:
+  * [ ] Quantify performance;
+  * [ ] Compare with other popular implementations;
+* [ ] Doxygen;
+* [ ] Website;
+* [ ] Makefiles:
+  * [ ] Compress all GCC-related into one;
+  * [ ] Compress all MSVC-related into one;
+  * [ ] . . .
+* [ ] Packages:
+  * [ ] vcpkg;
+  * [ ] HomeBrew;
+  * [ ] . . .
+* [ ] . . .
 
 
 <!-- ########################### end of file ########################### -->
