@@ -33,10 +33,13 @@ if((MSVC) AND (MSVC_VERSION GREATER_EQUAL 1914))
 endif()
 
 
-add_subdirectory(component)
-add_subdirectory(performance)
-add_subdirectory(scratch)
-add_subdirectory(unit)
+foreach(d component performance scratch unit)
+
+	if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${d}")
+
+		add_subdirectory(${d})
+	endif()
+endforeach()
 
 
 # ############################## end of file ############################# #
