@@ -1,4 +1,5 @@
 # SIS:AUTO_GENERATED: Remove this line if you edit the file, otherwise it will be overwritten
+add_subdirectory(libver)
 add_subdirectory(test.scratch.auto_buffer)
 add_subdirectory(test.scratch.cstring)
 add_subdirectory(test.scratch.cstring_create)
