@@ -22,6 +22,8 @@ Version 4.0.12 (1st September 2025)
  * Documentation;
  * CMake helper scripts now define default make command as "mingw32-make.exe" if recognise MinGW;
  * *.sh : ~ moved info-lines into ./.sis/script_info_lines.txt;
+ * added **libver** scratch test;
+ * .gitattributes;
  * . . .
 
 
